.metadata/.plugins/org.eclipse.cdt.ui/thanh_ghi.build.log
13:13:52 **** Incremental Build of configuration Debug for project thanh_ghi ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'SystemClock_Config':
../Core/Src/main.c:115:3: error: 'RCC_OscInitStruct' undeclared (first use in this function)
  115 |   RCC_OscInitStruct.OscillatorType = RCC_OSCILLATORTYPE_HSI;
      |   ^~~~~~~~~~~~~~~~~
../Core/Src/main.c:115:3: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:126:3: error: 'RCC_ClkInitStruct' undeclared (first use in this function)
  126 |   RCC_ClkInitStruct.ClockType = RCC_CLOCKTYPE_HCLK|RCC_CLOCKTYPE_SYSCLK
      |   ^~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

13:13:52 Build Failed. 3 errors, 0 warnings. (took 819ms)

